<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.katherine.ovsp.NosotrosFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:text="@string/somos"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    card_view:cardCornerRadius="4dp"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    card_view:cardElevation="5dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:src="@drawable/mision" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="sans-serif"
                                android:gravity="left|center_vertical"
                                android:text="@string/mision"
                                android:textSize="30sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                            <TextView
                                android:id="@+id/txmision"
                                android:layout_margin="15dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/txtmision"
                                >
                            </TextView>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    card_view:cardCornerRadius="4dp"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    card_view:cardElevation="5dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:src="@drawable/vision" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="sans-serif"
                                android:gravity="left|center_vertical"
                                android:text="@string/vision"
                                android:textSize="30sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                            <TextView
                                android:id="@+id/txvision"
                                android:layout_margin="15dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/txtvision"
                                >
                            </TextView>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardElevation="5dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="163dp"
                            android:padding="10dp"
                            android:src="@drawable/c" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:gravity="center_horizontal"
                            android:text="@string/objetivos"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <WebView
                            android:id="@+id/txobjetivos"
                            android:layout_margin="15dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            >
                        </WebView>

                    </LinearLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</FrameLayout>
