<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.katherine.ovsp.RedesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="4dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/t" />


                </LinearLayout>

            </android.support.v7.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="3dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="14dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/btnfacebook"
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:background="@android:drawable/screen_background_light_transparent"
                                android:src="@drawable/facebook" />

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/facebook" />
                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/btntwitter"
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:background="@android:drawable/screen_background_light_transparent"
                                android:src="@drawable/twitter" />

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/twitter" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="3dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="14dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/btnyoutube"
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:background="@android:drawable/screen_background_light_transparent"
                                android:src="@drawable/youtube" />

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/youtube" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>


                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/btninstagram"
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:background="@android:drawable/screen_background_light_transparent"
                                android:src="@drawable/instagram" />

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/instagram" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>


                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</FrameLayout>
